@@ -40,6 +40,8 @@ Release ...
   described in the BSD-derived manual page (thanks to Michael Piotrowski).
 * [nt]roff: Do not go into an infinite loop if a tab character appears in
   the arguments to ".warn" (bug reported by Russ Cox).
+* [nt]roff: Fixed a possible crash on 64-bit machines due to the choice
+  of an int for ptrdiff_t in paragraph-at-once justification (Steve Kargl).
 
 Release 080407
 * [nt]roff: A type definition problem that caused an endless loop on
